<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textColor="@color/mainText"
        android:fontFamily="@font/metropolis_bold"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_text">


        <EditText
            android:id="@+id/login_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:drawableEnd="@null"
            android:paddingRight="20dp"
            android:textColor="@color/mainText"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/loginfragment_edittext_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <TextView
            android:id="@+id/login_emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email_error"
            android:visibility="gone"
            android:textColor="@color/primary"
            android:textSize="9sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:layout_marginTop="18dp"
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:textColor="@color/mainText"
            android:drawableEnd="@null"
            android:paddingRight="20dp"
            android:fontFamily="@font/metropolis_regular"
            android:paddingLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <TextView
            android:id="@+id/passwordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password_error"
            android:visibility="gone"
            android:textColor="@color/primary"
            android:textSize="9sp"
            android:layout_marginTop="5dp"
            />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="Login"
            android:layout_marginTop="60dp"
            android:elevation="10dp"
            />


        <LinearLayout
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account_sign_in"
                android:fontFamily="@font/metropolis_regular"
                android:textColor="@color/mainText"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/sign_up_button_in_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_upbutton_in_login"
                android:fontFamily="@font/metropolis_regular"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:padding="10dp"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>